// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FacebookIntegrationAds/> render() should render a spinner 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(FacebookIntegrationAds)
    fetchAds={[Function]}
    integration={
      Immutable.Map {
        "id": 1,
        "name": "integration 1",
        "type": "facebook",
        "created_datetime": "2019-01-01 00:00:00",
      }
    }
    integrations={
      Immutable.List [
        Immutable.Map {
          "id": 1,
          "name": "integration 1",
          "type": "facebook",
          "created_datetime": "2019-01-01 00:00:00",
        },
      ]
    }
    updateAd={[Function]}
  >
    <FacebookIntegrationAds
      fetchAds={[Function]}
      integration={
        Immutable.Map {
          "id": 1,
          "name": "integration 1",
          "type": "facebook",
          "created_datetime": "2019-01-01 00:00:00",
        }
      }
      integrations={
        Immutable.List [
          Immutable.Map {
            "id": 1,
            "name": "integration 1",
            "type": "facebook",
            "created_datetime": "2019-01-01 00:00:00",
          },
        ]
      }
      internals={
        Immutable.Map {
          "1": Immutable.Map {
            "ads": Immutable.Map {},
          },
        }
      }
      loading={true}
      loadingAds={Immutable.List []}
      maxAccountAds={100}
      updateAd={[Function]}
    >
      <div
        className="full-width"
      >
        <PageHeader
          title={
            <Breadcrumb
              tag="ol"
            >
              <BreadcrumbItem
                tag="li"
              >
                <Link
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations"
                >
                  Integrations
                </Link>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                <Link
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations/facebook"
                >
                  Facebook, Messenger & Instagram
                </Link>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                integration 1
              </BreadcrumbItem>
              <BreadcrumbItem
                active={true}
                tag="li"
              >
                Ads
              </BreadcrumbItem>
            </Breadcrumb>
          }
        >
          <div
            className="d-flex align-items-center justify-content-between flex-wrap page-header "
          >
            <Breadcrumb
              tag="ol"
            >
              <ol
                className="breadcrumb"
              >
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    <Link
                      onlyActiveOnIndex={false}
                      style={Object {}}
                      to="/app/settings/integrations"
                    >
                      <a
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Integrations
                      </a>
                    </Link>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    <Link
                      onlyActiveOnIndex={false}
                      style={Object {}}
                      to="/app/settings/integrations/facebook"
                    >
                      <a
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Facebook, Messenger & Instagram
                      </a>
                    </Link>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    integration 1
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  active={true}
                  tag="li"
                >
                  <li
                    className="active breadcrumb-item"
                  >
                    Ads
                  </li>
                </BreadcrumbItem>
              </ol>
            </Breadcrumb>
          </div>
        </PageHeader>
        <FacebookIntegrationNavigation
          integration={
            Immutable.Map {
              "id": 1,
              "name": "integration 1",
              "type": "facebook",
              "created_datetime": "2019-01-01 00:00:00",
            }
          }
        >
          <SecondaryNavbar>
            <Navbar
              className="navbar"
              expand={false}
              tag="nav"
            >
              <nav
                className="navbar navbar"
              >
                <Link
                  activeClassName="disabled"
                  className="nav-link"
                  key=".$/app/settings/integrations/facebook/1/overview"
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations/facebook/1/overview"
                >
                  <a
                    className="nav-link"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    Overview
                  </a>
                </Link>
                <Link
                  activeClassName="disabled"
                  className="nav-link"
                  key=".$/app/settings/integrations/facebook/1/customer_chat"
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations/facebook/1/customer_chat"
                >
                  <a
                    className="nav-link"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    Customer chat
                  </a>
                </Link>
                <Link
                  activeClassName="disabled"
                  className="nav-link"
                  key=".$/app/settings/integrations/facebook/1/preferences"
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations/facebook/1/preferences"
                >
                  <a
                    className="nav-link"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    Preferences
                  </a>
                </Link>
              </nav>
            </Navbar>
          </SecondaryNavbar>
        </FacebookIntegrationNavigation>
        <Container
          className="page-container"
          fluid={true}
          tag="div"
        >
          <div
            className="page-container container-fluid"
          >
            <div
              className="mb-3"
            >
              <p>
                It can take up to 2 hours to synchronize new Instagram ads on Gorgias. Instagram ads 
                 
                comments are fetched every 20 minutes. Comments sent while an Instagram ad was not
                 
                active on Gorgias will not be fetched. Learn more about
                 
                <a
                  href="https://docs.gorgias.io/social-media-integrations/instagram-ads-comments"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Instagram ads comments support
                </a>
                 
                in our docs.
              </p>
            </div>
          </div>
        </Container>
        <Container
          fluid={true}
          tag="div"
        >
          <div
            className="container-fluid"
          >
            <Loader
              inline={false}
              minHeight="500px"
              size="40px"
            >
              <div
                className="container"
              >
                <div
                  className="inner"
                  style={
                    Object {
                      "minHeight": "500px",
                    }
                  }
                >
                  <i
                    className="icon-custom icon-circle-o-notch md-spin"
                    style={
                      Object {
                        "fontSize": "40px",
                      }
                    }
                  />
                </div>
              </div>
            </Loader>
          </div>
        </Container>
      </div>
    </FacebookIntegrationAds>
  </Connect(FacebookIntegrationAds)>
</Provider>
`;

exports[`<FacebookIntegrationAds/> render() should render with ads limit reached 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(FacebookIntegrationAds)
    fetchAds={[Function]}
    integration={
      Immutable.Map {
        "id": 1,
        "name": "integration 1",
        "type": "facebook",
        "created_datetime": "2019-01-01 00:00:00",
      }
    }
    integrations={
      Immutable.List [
        Immutable.Map {
          "id": 1,
          "name": "integration 1",
          "type": "facebook",
          "created_datetime": "2019-01-01 00:00:00",
        },
      ]
    }
    updateAd={[Function]}
  >
    <FacebookIntegrationAds
      fetchAds={[Function]}
      integration={
        Immutable.Map {
          "id": 1,
          "name": "integration 1",
          "type": "facebook",
          "created_datetime": "2019-01-01 00:00:00",
        }
      }
      integrations={
        Immutable.List [
          Immutable.Map {
            "id": 1,
            "name": "integration 1",
            "type": "facebook",
            "created_datetime": "2019-01-01 00:00:00",
          },
        ]
      }
      internals={
        Immutable.Map {
          "1": Immutable.Map {
            "ads": Immutable.Map {
              "postid1": Immutable.Map {
                "created_datetime": "2019-01-01 10:30:00",
                "comments_fetched_at": "2019-01-01 10:30:00",
                "name": "ad 1",
                "is_active": true,
                "publisher_platform": "INSTAGRAM",
                "permalink": "http://fake.link.to/ad1",
                "ad_account_id": "act_123",
              },
              "postid2": Immutable.Map {
                "created_datetime": "2019-01-01 10:30:00",
                "comments_fetched_at": "2019-01-01 10:30:00",
                "name": "ad 2",
                "is_active": true,
                "publisher_platform": "INSTAGRAM",
                "permalink": "http://fake.link.to/ad2",
                "ad_account_id": "act_123",
              },
              "postid3": Immutable.Map {
                "created_datetime": "2019-01-01 10:30:00",
                "comments_fetched_at": "2019-01-01 10:30:00",
                "name": "ad 3",
                "is_active": false,
                "publisher_platform": "INSTAGRAM",
                "permalink": "http://fake.link.to/ad3",
                "ad_account_id": "act_123",
              },
            },
          },
        }
      }
      loading={false}
      loadingAds={Immutable.List []}
      maxAccountAds={2}
      updateAd={[Function]}
    >
      <div
        className="full-width"
      >
        <PageHeader
          title={
            <Breadcrumb
              tag="ol"
            >
              <BreadcrumbItem
                tag="li"
              >
                <Link
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations"
                >
                  Integrations
                </Link>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                <Link
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations/facebook"
                >
                  Facebook, Messenger & Instagram
                </Link>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                integration 1
              </BreadcrumbItem>
              <BreadcrumbItem
                active={true}
                tag="li"
              >
                Ads
              </BreadcrumbItem>
            </Breadcrumb>
          }
        >
          <div
            className="d-flex align-items-center justify-content-between flex-wrap page-header "
          >
            <Breadcrumb
              tag="ol"
            >
              <ol
                className="breadcrumb"
              >
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    <Link
                      onlyActiveOnIndex={false}
                      style={Object {}}
                      to="/app/settings/integrations"
                    >
                      <a
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Integrations
                      </a>
                    </Link>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    <Link
                      onlyActiveOnIndex={false}
                      style={Object {}}
                      to="/app/settings/integrations/facebook"
                    >
                      <a
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Facebook, Messenger & Instagram
                      </a>
                    </Link>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    integration 1
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  active={true}
                  tag="li"
                >
                  <li
                    className="active breadcrumb-item"
                  >
                    Ads
                  </li>
                </BreadcrumbItem>
              </ol>
            </Breadcrumb>
          </div>
        </PageHeader>
        <FacebookIntegrationNavigation
          integration={
            Immutable.Map {
              "id": 1,
              "name": "integration 1",
              "type": "facebook",
              "created_datetime": "2019-01-01 00:00:00",
            }
          }
        >
          <SecondaryNavbar>
            <Navbar
              className="navbar"
              expand={false}
              tag="nav"
            >
              <nav
                className="navbar navbar"
              >
                <Link
                  activeClassName="disabled"
                  className="nav-link"
                  key=".$/app/settings/integrations/facebook/1/overview"
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations/facebook/1/overview"
                >
                  <a
                    className="nav-link"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    Overview
                  </a>
                </Link>
                <Link
                  activeClassName="disabled"
                  className="nav-link"
                  key=".$/app/settings/integrations/facebook/1/customer_chat"
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations/facebook/1/customer_chat"
                >
                  <a
                    className="nav-link"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    Customer chat
                  </a>
                </Link>
                <Link
                  activeClassName="disabled"
                  className="nav-link"
                  key=".$/app/settings/integrations/facebook/1/preferences"
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations/facebook/1/preferences"
                >
                  <a
                    className="nav-link"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    Preferences
                  </a>
                </Link>
              </nav>
            </Navbar>
          </SecondaryNavbar>
        </FacebookIntegrationNavigation>
        <Container
          className="page-container"
          fluid={true}
          tag="div"
        >
          <div
            className="page-container container-fluid"
          >
            <div
              className="mb-3"
            >
              <p>
                It can take up to 2 hours to synchronize new Instagram ads on Gorgias. Instagram ads 
                 
                comments are fetched every 20 minutes. Comments sent while an Instagram ad was not
                 
                active on Gorgias will not be fetched. Learn more about
                 
                <a
                  href="https://docs.gorgias.io/social-media-integrations/instagram-ads-comments"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Instagram ads comments support
                </a>
                 
                in our docs.
              </p>
              <AdsOverviewCard
                accountTotalAds={2}
                integrations={
                  Immutable.List [
                    Immutable.Map {
                      "id": 1,
                      "name": "integration 1",
                      "type": "facebook",
                      "created_datetime": "2019-01-01 00:00:00",
                    },
                  ]
                }
                internals={
                  Immutable.Map {
                    "1": Immutable.Map {
                      "ads": Immutable.Map {
                        "postid1": Immutable.Map {
                          "created_datetime": "2019-01-01 10:30:00",
                          "comments_fetched_at": "2019-01-01 10:30:00",
                          "name": "ad 1",
                          "is_active": true,
                          "publisher_platform": "INSTAGRAM",
                          "permalink": "http://fake.link.to/ad1",
                          "ad_account_id": "act_123",
                        },
                        "postid2": Immutable.Map {
                          "created_datetime": "2019-01-01 10:30:00",
                          "comments_fetched_at": "2019-01-01 10:30:00",
                          "name": "ad 2",
                          "is_active": true,
                          "publisher_platform": "INSTAGRAM",
                          "permalink": "http://fake.link.to/ad2",
                          "ad_account_id": "act_123",
                        },
                        "postid3": Immutable.Map {
                          "created_datetime": "2019-01-01 10:30:00",
                          "comments_fetched_at": "2019-01-01 10:30:00",
                          "name": "ad 3",
                          "is_active": false,
                          "publisher_platform": "INSTAGRAM",
                          "permalink": "http://fake.link.to/ad3",
                          "ad_account_id": "act_123",
                        },
                      },
                    },
                  }
                }
                maxAccountAds={2}
              >
                <Card
                  body={true}
                  tag="div"
                >
                  <div
                    className="card card-body"
                  >
                    <h3>
                      Active ads per integration
                    </h3>
                    <UpgradePlanAlert>
                      <Alert
                        closeAriaLabel="Close"
                        color="success"
                        isOpen={true}
                        tag="div"
                        transition={
                          Object {
                            "appear": true,
                            "baseClass": "fade",
                            "baseClassActive": "show",
                            "enter": true,
                            "exit": true,
                            "in": true,
                            "mountOnEnter": false,
                            "onEnter": [Function],
                            "onEntered": [Function],
                            "onEntering": [Function],
                            "onExit": [Function],
                            "onExited": [Function],
                            "onExiting": [Function],
                            "tag": "div",
                            "timeout": 150,
                            "unmountOnExit": true,
                          }
                        }
                      >
                        <Fade
                          appear={true}
                          baseClass="fade"
                          baseClassActive="show"
                          className="alert alert-success"
                          enter={true}
                          exit={true}
                          in={true}
                          mountOnEnter={false}
                          onEnter={[Function]}
                          onEntered={[Function]}
                          onEntering={[Function]}
                          onExit={[Function]}
                          onExited={[Function]}
                          onExiting={[Function]}
                          role="alert"
                          tag="div"
                          timeout={150}
                          unmountOnExit={true}
                        >
                          <Transition
                            appear={true}
                            enter={true}
                            exit={true}
                            in={true}
                            mountOnEnter={false}
                            onEnter={[Function]}
                            onEntered={[Function]}
                            onEntering={[Function]}
                            onExit={[Function]}
                            onExited={[Function]}
                            onExiting={[Function]}
                            timeout={150}
                            unmountOnExit={true}
                          >
                            <div
                              className="alert alert-success fade"
                              role="alert"
                            >
                              <strong>
                                Need to synchronize more ads?
                              </strong>
                               
                              <Link
                                className="alert-link"
                                onlyActiveOnIndex={false}
                                style={Object {}}
                                to="/app/settings/billing"
                              >
                                <a
                                  className="alert-link"
                                  onClick={[Function]}
                                  style={Object {}}
                                >
                                  Upgrade your plan!
                                </a>
                              </Link>
                            </div>
                          </Transition>
                        </Fade>
                      </Alert>
                    </UpgradePlanAlert>
                    <div
                      className="text-center"
                    >
                      2/2 ads 
                      <a
                        id="active-ads-tooltip"
                      >
                        <i
                          className="material-icons text-muted"
                        >
                          info_outline
                        </i>
                      </a>
                      <UncontrolledTooltip
                        target="active-ads-tooltip"
                      >
                        <Tooltip
                          autohide={true}
                          delay={
                            Object {
                              "hide": 250,
                              "show": 0,
                            }
                          }
                          hideArrow={false}
                          isOpen={false}
                          placement="top"
                          placementPrefix="bs-tooltip"
                          target="active-ads-tooltip"
                          toggle={[Function]}
                        />
                      </UncontrolledTooltip>
                    </div>
                    <Progress
                      max={100}
                      multi={true}
                      tag="div"
                      value={0}
                    >
                      <div
                        className="progress"
                      >
                        <Progress
                          bar={true}
                          className="color-NaN"
                          id="progress-1"
                          key="progress-1"
                          max={2}
                          striped={true}
                          tag="div"
                          value={2}
                        >
                          <div
                            aria-valuemax={2}
                            aria-valuemin="0"
                            aria-valuenow={2}
                            className="progress-bar color-NaN progress-bar-striped"
                            role="progressbar"
                            style={
                              Object {
                                "width": "100%",
                              }
                            }
                          />
                        </Progress>
                      </div>
                    </Progress>
                    <div
                      className="legendContainer"
                    >
                      <div
                        className="legend"
                        key="legend-1"
                      >
                        <div
                          className="color-NaN progress-bar-striped legendColor"
                        />
                        integration 1
                         
                        (
                        2
                         active ads)
                      </div>
                    </div>
                  </div>
                </Card>
              </AdsOverviewCard>
            </div>
          </div>
        </Container>
        <AdsTable
          accountTotalAds={2}
          ads={
            Immutable.Seq [
              Array [
                "postid1",
                Immutable.Map {
                  "created_datetime": "2019-01-01 10:30:00",
                  "comments_fetched_at": "2019-01-01 10:30:00",
                  "name": "ad 1",
                  "is_active": true,
                  "publisher_platform": "INSTAGRAM",
                  "permalink": "http://fake.link.to/ad1",
                  "ad_account_id": "act_123",
                },
              ],
              Array [
                "postid2",
                Immutable.Map {
                  "created_datetime": "2019-01-01 10:30:00",
                  "comments_fetched_at": "2019-01-01 10:30:00",
                  "name": "ad 2",
                  "is_active": true,
                  "publisher_platform": "INSTAGRAM",
                  "permalink": "http://fake.link.to/ad2",
                  "ad_account_id": "act_123",
                },
              ],
              Array [
                "postid3",
                Immutable.Map {
                  "created_datetime": "2019-01-01 10:30:00",
                  "comments_fetched_at": "2019-01-01 10:30:00",
                  "name": "ad 3",
                  "is_active": false,
                  "publisher_platform": "INSTAGRAM",
                  "permalink": "http://fake.link.to/ad3",
                  "ad_account_id": "act_123",
                },
              ],
            ]
          }
          loadingAds={Immutable.List []}
          maxAccountAds={2}
          updateAd={[Function]}
        >
          <Table
            hover={true}
            responsiveTag="div"
            tag="table"
          >
            <table
              className="table table-hover"
            >
              <thead>
                <tr
                  className="row"
                >
                  <th>
                    Name
                  </th>
                  <th>
                    Publisher platform
                  </th>
                  <th>
                    Creation date
                  </th>
                  <th />
                </tr>
              </thead>
              <tbody>
                <tr
                  className="row"
                  key="postid1"
                >
                  <td>
                    <a
                      href="http://fake.link.to/ad1"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      ad 1
                    </a>
                  </td>
                  <td
                    className="text-capitalize"
                  >
                    instagram
                  </td>
                  <td>
                    <Connect(DatetimeLabel)
                      dateTime="2019-01-01 10:30:00"
                    >
                      <DatetimeLabel
                        dateTime="2019-01-01 10:30:00"
                        dispatch={[Function]}
                        timezone="America/Los_Angeles"
                      >
                        <span>
                          <span
                            id="datetime-tooltip-pjpsszd2icb"
                          >
                            01/01/2019
                          </span>
                          <Tooltip
                            className="datetimeTooltip"
                            delay={
                              Object {
                                "hide": 0,
                                "show": 200,
                              }
                            }
                            placement="top"
                            target="datetime-tooltip-pjpsszd2icb"
                          >
                            <UncontrolledTooltip
                              className="datetimeTooltip"
                              delay={
                                Object {
                                  "hide": 0,
                                  "show": 200,
                                }
                              }
                              placement="top"
                              target="datetime-tooltip-pjpsszd2icb"
                            >
                              <Tooltip
                                autohide={true}
                                className="datetimeTooltip"
                                delay={
                                  Object {
                                    "hide": 0,
                                    "show": 200,
                                  }
                                }
                                hideArrow={false}
                                isOpen={false}
                                placement="top"
                                placementPrefix="bs-tooltip"
                                target="datetime-tooltip-pjpsszd2icb"
                                toggle={[Function]}
                              />
                            </UncontrolledTooltip>
                          </Tooltip>
                        </span>
                      </DatetimeLabel>
                    </Connect(DatetimeLabel)>
                  </td>
                  <td
                    className="smallest align-middle"
                  >
                    <ToggleButton
                      disabled={false}
                      loading={false}
                      onChange={[Function]}
                      value={true}
                    >
                      <label
                        className="switch"
                        onClick={[Function]}
                      >
                        <input
                          checked={true}
                          disabled={false}
                          readOnly={true}
                          type="checkbox"
                        />
                        <div
                          className="slider"
                        />
                      </label>
                    </ToggleButton>
                  </td>
                </tr>
                <tr
                  className="row"
                  key="postid2"
                >
                  <td>
                    <a
                      href="http://fake.link.to/ad2"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      ad 2
                    </a>
                  </td>
                  <td
                    className="text-capitalize"
                  >
                    instagram
                  </td>
                  <td>
                    <Connect(DatetimeLabel)
                      dateTime="2019-01-01 10:30:00"
                    >
                      <DatetimeLabel
                        dateTime="2019-01-01 10:30:00"
                        dispatch={[Function]}
                        timezone="America/Los_Angeles"
                      >
                        <span>
                          <span
                            id="datetime-tooltip-pjpsszd2icb"
                          >
                            01/01/2019
                          </span>
                          <Tooltip
                            className="datetimeTooltip"
                            delay={
                              Object {
                                "hide": 0,
                                "show": 200,
                              }
                            }
                            placement="top"
                            target="datetime-tooltip-pjpsszd2icb"
                          >
                            <UncontrolledTooltip
                              className="datetimeTooltip"
                              delay={
                                Object {
                                  "hide": 0,
                                  "show": 200,
                                }
                              }
                              placement="top"
                              target="datetime-tooltip-pjpsszd2icb"
                            >
                              <Tooltip
                                autohide={true}
                                className="datetimeTooltip"
                                delay={
                                  Object {
                                    "hide": 0,
                                    "show": 200,
                                  }
                                }
                                hideArrow={false}
                                isOpen={false}
                                placement="top"
                                placementPrefix="bs-tooltip"
                                target="datetime-tooltip-pjpsszd2icb"
                                toggle={[Function]}
                              />
                            </UncontrolledTooltip>
                          </Tooltip>
                        </span>
                      </DatetimeLabel>
                    </Connect(DatetimeLabel)>
                  </td>
                  <td
                    className="smallest align-middle"
                  >
                    <ToggleButton
                      disabled={false}
                      loading={false}
                      onChange={[Function]}
                      value={true}
                    >
                      <label
                        className="switch"
                        onClick={[Function]}
                      >
                        <input
                          checked={true}
                          disabled={false}
                          readOnly={true}
                          type="checkbox"
                        />
                        <div
                          className="slider"
                        />
                      </label>
                    </ToggleButton>
                  </td>
                </tr>
                <tr
                  className="row"
                  key="postid3"
                >
                  <td>
                    <a
                      href="http://fake.link.to/ad3"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      ad 3
                    </a>
                  </td>
                  <td
                    className="text-capitalize"
                  >
                    instagram
                  </td>
                  <td>
                    <Connect(DatetimeLabel)
                      dateTime="2019-01-01 10:30:00"
                    >
                      <DatetimeLabel
                        dateTime="2019-01-01 10:30:00"
                        dispatch={[Function]}
                        timezone="America/Los_Angeles"
                      >
                        <span>
                          <span
                            id="datetime-tooltip-pjpsszd2icb"
                          >
                            01/01/2019
                          </span>
                          <Tooltip
                            className="datetimeTooltip"
                            delay={
                              Object {
                                "hide": 0,
                                "show": 200,
                              }
                            }
                            placement="top"
                            target="datetime-tooltip-pjpsszd2icb"
                          >
                            <UncontrolledTooltip
                              className="datetimeTooltip"
                              delay={
                                Object {
                                  "hide": 0,
                                  "show": 200,
                                }
                              }
                              placement="top"
                              target="datetime-tooltip-pjpsszd2icb"
                            >
                              <Tooltip
                                autohide={true}
                                className="datetimeTooltip"
                                delay={
                                  Object {
                                    "hide": 0,
                                    "show": 200,
                                  }
                                }
                                hideArrow={false}
                                isOpen={false}
                                placement="top"
                                placementPrefix="bs-tooltip"
                                target="datetime-tooltip-pjpsszd2icb"
                                toggle={[Function]}
                              />
                            </UncontrolledTooltip>
                          </Tooltip>
                        </span>
                      </DatetimeLabel>
                    </Connect(DatetimeLabel)>
                  </td>
                  <td
                    className="smallest align-middle"
                  >
                    <ToggleButton
                      disabled={true}
                      loading={false}
                      onChange={[Function]}
                      value={false}
                    >
                      <label
                        className="switch disabled"
                        onClick={[Function]}
                      >
                        <input
                          checked={false}
                          disabled={true}
                          readOnly={true}
                          type="checkbox"
                        />
                        <div
                          className="slider"
                        />
                      </label>
                    </ToggleButton>
                  </td>
                </tr>
              </tbody>
            </table>
          </Table>
        </AdsTable>
      </div>
    </FacebookIntegrationAds>
  </Connect(FacebookIntegrationAds)>
</Provider>
`;

exports[`<FacebookIntegrationAds/> render() should render with one Facebook ad 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(FacebookIntegrationAds)
    fetchAds={[Function]}
    integration={
      Immutable.Map {
        "id": 1,
        "name": "integration 1",
        "type": "facebook",
        "created_datetime": "2019-01-01 00:00:00",
      }
    }
    integrations={
      Immutable.List [
        Immutable.Map {
          "id": 1,
          "name": "integration 1",
          "type": "facebook",
          "created_datetime": "2019-01-01 00:00:00",
        },
      ]
    }
    updateAd={[Function]}
  >
    <FacebookIntegrationAds
      fetchAds={[Function]}
      integration={
        Immutable.Map {
          "id": 1,
          "name": "integration 1",
          "type": "facebook",
          "created_datetime": "2019-01-01 00:00:00",
        }
      }
      integrations={
        Immutable.List [
          Immutable.Map {
            "id": 1,
            "name": "integration 1",
            "type": "facebook",
            "created_datetime": "2019-01-01 00:00:00",
          },
        ]
      }
      internals={
        Immutable.Map {
          "1": Immutable.Map {
            "ads": Immutable.Map {
              "postid1": Immutable.Map {
                "created_datetime": "2019-01-01 10:30:00",
                "comments_fetched_at": "2019-01-01 10:30:00",
                "name": "ad 1",
                "is_active": true,
                "publisher_platform": "FACEBOOK",
                "permalink": "http://fake.link.to/ad1",
                "ad_account_id": "act_123",
              },
            },
          },
        }
      }
      loading={false}
      loadingAds={Immutable.List []}
      maxAccountAds={100}
      updateAd={[Function]}
    >
      <div
        className="full-width"
      >
        <PageHeader
          title={
            <Breadcrumb
              tag="ol"
            >
              <BreadcrumbItem
                tag="li"
              >
                <Link
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations"
                >
                  Integrations
                </Link>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                <Link
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations/facebook"
                >
                  Facebook, Messenger & Instagram
                </Link>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                integration 1
              </BreadcrumbItem>
              <BreadcrumbItem
                active={true}
                tag="li"
              >
                Ads
              </BreadcrumbItem>
            </Breadcrumb>
          }
        >
          <div
            className="d-flex align-items-center justify-content-between flex-wrap page-header "
          >
            <Breadcrumb
              tag="ol"
            >
              <ol
                className="breadcrumb"
              >
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    <Link
                      onlyActiveOnIndex={false}
                      style={Object {}}
                      to="/app/settings/integrations"
                    >
                      <a
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Integrations
                      </a>
                    </Link>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    <Link
                      onlyActiveOnIndex={false}
                      style={Object {}}
                      to="/app/settings/integrations/facebook"
                    >
                      <a
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Facebook, Messenger & Instagram
                      </a>
                    </Link>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    integration 1
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  active={true}
                  tag="li"
                >
                  <li
                    className="active breadcrumb-item"
                  >
                    Ads
                  </li>
                </BreadcrumbItem>
              </ol>
            </Breadcrumb>
          </div>
        </PageHeader>
        <FacebookIntegrationNavigation
          integration={
            Immutable.Map {
              "id": 1,
              "name": "integration 1",
              "type": "facebook",
              "created_datetime": "2019-01-01 00:00:00",
            }
          }
        >
          <SecondaryNavbar>
            <Navbar
              className="navbar"
              expand={false}
              tag="nav"
            >
              <nav
                className="navbar navbar"
              >
                <Link
                  activeClassName="disabled"
                  className="nav-link"
                  key=".$/app/settings/integrations/facebook/1/overview"
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations/facebook/1/overview"
                >
                  <a
                    className="nav-link"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    Overview
                  </a>
                </Link>
                <Link
                  activeClassName="disabled"
                  className="nav-link"
                  key=".$/app/settings/integrations/facebook/1/customer_chat"
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations/facebook/1/customer_chat"
                >
                  <a
                    className="nav-link"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    Customer chat
                  </a>
                </Link>
                <Link
                  activeClassName="disabled"
                  className="nav-link"
                  key=".$/app/settings/integrations/facebook/1/preferences"
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations/facebook/1/preferences"
                >
                  <a
                    className="nav-link"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    Preferences
                  </a>
                </Link>
              </nav>
            </Navbar>
          </SecondaryNavbar>
        </FacebookIntegrationNavigation>
        <Container
          className="page-container"
          fluid={true}
          tag="div"
        >
          <div
            className="page-container container-fluid"
          >
            <div
              className="mb-3"
            >
              <p>
                It can take up to 2 hours to synchronize new Instagram ads on Gorgias. Instagram ads 
                 
                comments are fetched every 20 minutes. Comments sent while an Instagram ad was not
                 
                active on Gorgias will not be fetched. Learn more about
                 
                <a
                  href="https://docs.gorgias.io/social-media-integrations/instagram-ads-comments"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Instagram ads comments support
                </a>
                 
                in our docs.
              </p>
            </div>
          </div>
        </Container>
        <AdsTable
          accountTotalAds={1}
          ads={
            Immutable.Seq [
              Array [
                "postid1",
                Immutable.Map {
                  "created_datetime": "2019-01-01 10:30:00",
                  "comments_fetched_at": "2019-01-01 10:30:00",
                  "name": "ad 1",
                  "is_active": true,
                  "publisher_platform": "FACEBOOK",
                  "permalink": "http://fake.link.to/ad1",
                  "ad_account_id": "act_123",
                },
              ],
            ]
          }
          loadingAds={Immutable.List []}
          maxAccountAds={100}
          updateAd={[Function]}
        >
          <Table
            hover={true}
            responsiveTag="div"
            tag="table"
          >
            <table
              className="table table-hover"
            >
              <thead>
                <tr
                  className="row"
                >
                  <th>
                    Name
                  </th>
                  <th>
                    Publisher platform
                  </th>
                  <th>
                    Creation date
                  </th>
                  <th />
                </tr>
              </thead>
              <tbody>
                <tr
                  className="row"
                  key="postid1"
                >
                  <td>
                    <a
                      href="http://fake.link.to/ad1"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      ad 1
                    </a>
                  </td>
                  <td
                    className="text-capitalize"
                  >
                    facebook
                  </td>
                  <td>
                    <Connect(DatetimeLabel)
                      dateTime="2019-01-01 10:30:00"
                    >
                      <DatetimeLabel
                        dateTime="2019-01-01 10:30:00"
                        dispatch={[Function]}
                        timezone="America/Los_Angeles"
                      >
                        <span>
                          <span
                            id="datetime-tooltip-pjpsszd2icb"
                          >
                            01/01/2019
                          </span>
                          <Tooltip
                            className="datetimeTooltip"
                            delay={
                              Object {
                                "hide": 0,
                                "show": 200,
                              }
                            }
                            placement="top"
                            target="datetime-tooltip-pjpsszd2icb"
                          >
                            <UncontrolledTooltip
                              className="datetimeTooltip"
                              delay={
                                Object {
                                  "hide": 0,
                                  "show": 200,
                                }
                              }
                              placement="top"
                              target="datetime-tooltip-pjpsszd2icb"
                            >
                              <Tooltip
                                autohide={true}
                                className="datetimeTooltip"
                                delay={
                                  Object {
                                    "hide": 0,
                                    "show": 200,
                                  }
                                }
                                hideArrow={false}
                                isOpen={false}
                                placement="top"
                                placementPrefix="bs-tooltip"
                                target="datetime-tooltip-pjpsszd2icb"
                                toggle={[Function]}
                              />
                            </UncontrolledTooltip>
                          </Tooltip>
                        </span>
                      </DatetimeLabel>
                    </Connect(DatetimeLabel)>
                  </td>
                  <td
                    className="smallest align-middle"
                  >
                    <ToggleButton
                      disabled={false}
                      loading={false}
                      onChange={[Function]}
                      value={true}
                    >
                      <label
                        className="switch"
                        onClick={[Function]}
                      >
                        <input
                          checked={true}
                          disabled={false}
                          readOnly={true}
                          type="checkbox"
                        />
                        <div
                          className="slider"
                        />
                      </label>
                    </ToggleButton>
                  </td>
                </tr>
              </tbody>
            </table>
          </Table>
        </AdsTable>
      </div>
    </FacebookIntegrationAds>
  </Connect(FacebookIntegrationAds)>
</Provider>
`;

exports[`<FacebookIntegrationAds/> render() should render with one Instagram ad 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(FacebookIntegrationAds)
    fetchAds={[Function]}
    integration={
      Immutable.Map {
        "id": 1,
        "name": "integration 1",
        "type": "facebook",
        "created_datetime": "2019-01-01 00:00:00",
      }
    }
    integrations={
      Immutable.List [
        Immutable.Map {
          "id": 1,
          "name": "integration 1",
          "type": "facebook",
          "created_datetime": "2019-01-01 00:00:00",
        },
      ]
    }
    updateAd={[Function]}
  >
    <FacebookIntegrationAds
      fetchAds={[Function]}
      integration={
        Immutable.Map {
          "id": 1,
          "name": "integration 1",
          "type": "facebook",
          "created_datetime": "2019-01-01 00:00:00",
        }
      }
      integrations={
        Immutable.List [
          Immutable.Map {
            "id": 1,
            "name": "integration 1",
            "type": "facebook",
            "created_datetime": "2019-01-01 00:00:00",
          },
        ]
      }
      internals={
        Immutable.Map {
          "1": Immutable.Map {
            "ads": Immutable.Map {
              "postid1": Immutable.Map {
                "created_datetime": "2019-01-01 10:30:00",
                "comments_fetched_at": "2019-01-01 10:30:00",
                "name": "ad 1",
                "is_active": true,
                "publisher_platform": "INSTAGRAM",
                "permalink": "http://fake.link.to/ad1",
                "ad_account_id": "act_123",
              },
            },
          },
        }
      }
      loading={false}
      loadingAds={Immutable.List []}
      maxAccountAds={100}
      updateAd={[Function]}
    >
      <div
        className="full-width"
      >
        <PageHeader
          title={
            <Breadcrumb
              tag="ol"
            >
              <BreadcrumbItem
                tag="li"
              >
                <Link
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations"
                >
                  Integrations
                </Link>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                <Link
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations/facebook"
                >
                  Facebook, Messenger & Instagram
                </Link>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                integration 1
              </BreadcrumbItem>
              <BreadcrumbItem
                active={true}
                tag="li"
              >
                Ads
              </BreadcrumbItem>
            </Breadcrumb>
          }
        >
          <div
            className="d-flex align-items-center justify-content-between flex-wrap page-header "
          >
            <Breadcrumb
              tag="ol"
            >
              <ol
                className="breadcrumb"
              >
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    <Link
                      onlyActiveOnIndex={false}
                      style={Object {}}
                      to="/app/settings/integrations"
                    >
                      <a
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Integrations
                      </a>
                    </Link>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    <Link
                      onlyActiveOnIndex={false}
                      style={Object {}}
                      to="/app/settings/integrations/facebook"
                    >
                      <a
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Facebook, Messenger & Instagram
                      </a>
                    </Link>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    integration 1
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  active={true}
                  tag="li"
                >
                  <li
                    className="active breadcrumb-item"
                  >
                    Ads
                  </li>
                </BreadcrumbItem>
              </ol>
            </Breadcrumb>
          </div>
        </PageHeader>
        <FacebookIntegrationNavigation
          integration={
            Immutable.Map {
              "id": 1,
              "name": "integration 1",
              "type": "facebook",
              "created_datetime": "2019-01-01 00:00:00",
            }
          }
        >
          <SecondaryNavbar>
            <Navbar
              className="navbar"
              expand={false}
              tag="nav"
            >
              <nav
                className="navbar navbar"
              >
                <Link
                  activeClassName="disabled"
                  className="nav-link"
                  key=".$/app/settings/integrations/facebook/1/overview"
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations/facebook/1/overview"
                >
                  <a
                    className="nav-link"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    Overview
                  </a>
                </Link>
                <Link
                  activeClassName="disabled"
                  className="nav-link"
                  key=".$/app/settings/integrations/facebook/1/customer_chat"
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations/facebook/1/customer_chat"
                >
                  <a
                    className="nav-link"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    Customer chat
                  </a>
                </Link>
                <Link
                  activeClassName="disabled"
                  className="nav-link"
                  key=".$/app/settings/integrations/facebook/1/preferences"
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations/facebook/1/preferences"
                >
                  <a
                    className="nav-link"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    Preferences
                  </a>
                </Link>
              </nav>
            </Navbar>
          </SecondaryNavbar>
        </FacebookIntegrationNavigation>
        <Container
          className="page-container"
          fluid={true}
          tag="div"
        >
          <div
            className="page-container container-fluid"
          >
            <div
              className="mb-3"
            >
              <p>
                It can take up to 2 hours to synchronize new Instagram ads on Gorgias. Instagram ads 
                 
                comments are fetched every 20 minutes. Comments sent while an Instagram ad was not
                 
                active on Gorgias will not be fetched. Learn more about
                 
                <a
                  href="https://docs.gorgias.io/social-media-integrations/instagram-ads-comments"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Instagram ads comments support
                </a>
                 
                in our docs.
              </p>
            </div>
          </div>
        </Container>
        <AdsTable
          accountTotalAds={1}
          ads={
            Immutable.Seq [
              Array [
                "postid1",
                Immutable.Map {
                  "created_datetime": "2019-01-01 10:30:00",
                  "comments_fetched_at": "2019-01-01 10:30:00",
                  "name": "ad 1",
                  "is_active": true,
                  "publisher_platform": "INSTAGRAM",
                  "permalink": "http://fake.link.to/ad1",
                  "ad_account_id": "act_123",
                },
              ],
            ]
          }
          loadingAds={Immutable.List []}
          maxAccountAds={100}
          updateAd={[Function]}
        >
          <Table
            hover={true}
            responsiveTag="div"
            tag="table"
          >
            <table
              className="table table-hover"
            >
              <thead>
                <tr
                  className="row"
                >
                  <th>
                    Name
                  </th>
                  <th>
                    Publisher platform
                  </th>
                  <th>
                    Creation date
                  </th>
                  <th />
                </tr>
              </thead>
              <tbody>
                <tr
                  className="row"
                  key="postid1"
                >
                  <td>
                    <a
                      href="http://fake.link.to/ad1"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      ad 1
                    </a>
                  </td>
                  <td
                    className="text-capitalize"
                  >
                    instagram
                  </td>
                  <td>
                    <Connect(DatetimeLabel)
                      dateTime="2019-01-01 10:30:00"
                    >
                      <DatetimeLabel
                        dateTime="2019-01-01 10:30:00"
                        dispatch={[Function]}
                        timezone="America/Los_Angeles"
                      >
                        <span>
                          <span
                            id="datetime-tooltip-pjpsszd2icb"
                          >
                            01/01/2019
                          </span>
                          <Tooltip
                            className="datetimeTooltip"
                            delay={
                              Object {
                                "hide": 0,
                                "show": 200,
                              }
                            }
                            placement="top"
                            target="datetime-tooltip-pjpsszd2icb"
                          >
                            <UncontrolledTooltip
                              className="datetimeTooltip"
                              delay={
                                Object {
                                  "hide": 0,
                                  "show": 200,
                                }
                              }
                              placement="top"
                              target="datetime-tooltip-pjpsszd2icb"
                            >
                              <Tooltip
                                autohide={true}
                                className="datetimeTooltip"
                                delay={
                                  Object {
                                    "hide": 0,
                                    "show": 200,
                                  }
                                }
                                hideArrow={false}
                                isOpen={false}
                                placement="top"
                                placementPrefix="bs-tooltip"
                                target="datetime-tooltip-pjpsszd2icb"
                                toggle={[Function]}
                              />
                            </UncontrolledTooltip>
                          </Tooltip>
                        </span>
                      </DatetimeLabel>
                    </Connect(DatetimeLabel)>
                  </td>
                  <td
                    className="smallest align-middle"
                  >
                    <ToggleButton
                      disabled={false}
                      loading={false}
                      onChange={[Function]}
                      value={true}
                    >
                      <label
                        className="switch"
                        onClick={[Function]}
                      >
                        <input
                          checked={true}
                          disabled={false}
                          readOnly={true}
                          type="checkbox"
                        />
                        <div
                          className="slider"
                        />
                      </label>
                    </ToggleButton>
                  </td>
                </tr>
              </tbody>
            </table>
          </Table>
        </AdsTable>
      </div>
    </FacebookIntegrationAds>
  </Connect(FacebookIntegrationAds)>
</Provider>
`;

exports[`<FacebookIntegrationAds/> render() should render with two ads (one not active) 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(FacebookIntegrationAds)
    fetchAds={[Function]}
    integration={
      Immutable.Map {
        "id": 1,
        "name": "integration 1",
        "type": "facebook",
        "created_datetime": "2019-01-01 00:00:00",
      }
    }
    integrations={
      Immutable.List [
        Immutable.Map {
          "id": 1,
          "name": "integration 1",
          "type": "facebook",
          "created_datetime": "2019-01-01 00:00:00",
        },
      ]
    }
    updateAd={[Function]}
  >
    <FacebookIntegrationAds
      fetchAds={[Function]}
      integration={
        Immutable.Map {
          "id": 1,
          "name": "integration 1",
          "type": "facebook",
          "created_datetime": "2019-01-01 00:00:00",
        }
      }
      integrations={
        Immutable.List [
          Immutable.Map {
            "id": 1,
            "name": "integration 1",
            "type": "facebook",
            "created_datetime": "2019-01-01 00:00:00",
          },
        ]
      }
      internals={
        Immutable.Map {
          "1": Immutable.Map {
            "ads": Immutable.Map {
              "postid1": Immutable.Map {
                "created_datetime": "2019-01-01 10:30:00",
                "comments_fetched_at": "2019-01-01 10:30:00",
                "name": "ad 1",
                "is_active": true,
                "publisher_platform": "INSTAGRAM",
                "permalink": "http://fake.link.to/ad1",
                "ad_account_id": "act_123",
              },
              "postid2": Immutable.Map {
                "created_datetime": "2019-01-01 10:30:00",
                "comments_fetched_at": "2019-01-01 10:30:00",
                "name": "ad 2",
                "is_active": false,
                "publisher_platform": "INSTAGRAM",
                "permalink": "http://fake.link.to/ad2",
                "ad_account_id": "act_123",
              },
            },
          },
        }
      }
      loading={false}
      loadingAds={Immutable.List []}
      maxAccountAds={100}
      updateAd={[Function]}
    >
      <div
        className="full-width"
      >
        <PageHeader
          title={
            <Breadcrumb
              tag="ol"
            >
              <BreadcrumbItem
                tag="li"
              >
                <Link
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations"
                >
                  Integrations
                </Link>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                <Link
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations/facebook"
                >
                  Facebook, Messenger & Instagram
                </Link>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                integration 1
              </BreadcrumbItem>
              <BreadcrumbItem
                active={true}
                tag="li"
              >
                Ads
              </BreadcrumbItem>
            </Breadcrumb>
          }
        >
          <div
            className="d-flex align-items-center justify-content-between flex-wrap page-header "
          >
            <Breadcrumb
              tag="ol"
            >
              <ol
                className="breadcrumb"
              >
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    <Link
                      onlyActiveOnIndex={false}
                      style={Object {}}
                      to="/app/settings/integrations"
                    >
                      <a
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Integrations
                      </a>
                    </Link>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    <Link
                      onlyActiveOnIndex={false}
                      style={Object {}}
                      to="/app/settings/integrations/facebook"
                    >
                      <a
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Facebook, Messenger & Instagram
                      </a>
                    </Link>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    integration 1
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  active={true}
                  tag="li"
                >
                  <li
                    className="active breadcrumb-item"
                  >
                    Ads
                  </li>
                </BreadcrumbItem>
              </ol>
            </Breadcrumb>
          </div>
        </PageHeader>
        <FacebookIntegrationNavigation
          integration={
            Immutable.Map {
              "id": 1,
              "name": "integration 1",
              "type": "facebook",
              "created_datetime": "2019-01-01 00:00:00",
            }
          }
        >
          <SecondaryNavbar>
            <Navbar
              className="navbar"
              expand={false}
              tag="nav"
            >
              <nav
                className="navbar navbar"
              >
                <Link
                  activeClassName="disabled"
                  className="nav-link"
                  key=".$/app/settings/integrations/facebook/1/overview"
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations/facebook/1/overview"
                >
                  <a
                    className="nav-link"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    Overview
                  </a>
                </Link>
                <Link
                  activeClassName="disabled"
                  className="nav-link"
                  key=".$/app/settings/integrations/facebook/1/customer_chat"
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations/facebook/1/customer_chat"
                >
                  <a
                    className="nav-link"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    Customer chat
                  </a>
                </Link>
                <Link
                  activeClassName="disabled"
                  className="nav-link"
                  key=".$/app/settings/integrations/facebook/1/preferences"
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations/facebook/1/preferences"
                >
                  <a
                    className="nav-link"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    Preferences
                  </a>
                </Link>
              </nav>
            </Navbar>
          </SecondaryNavbar>
        </FacebookIntegrationNavigation>
        <Container
          className="page-container"
          fluid={true}
          tag="div"
        >
          <div
            className="page-container container-fluid"
          >
            <div
              className="mb-3"
            >
              <p>
                It can take up to 2 hours to synchronize new Instagram ads on Gorgias. Instagram ads 
                 
                comments are fetched every 20 minutes. Comments sent while an Instagram ad was not
                 
                active on Gorgias will not be fetched. Learn more about
                 
                <a
                  href="https://docs.gorgias.io/social-media-integrations/instagram-ads-comments"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Instagram ads comments support
                </a>
                 
                in our docs.
              </p>
            </div>
          </div>
        </Container>
        <AdsTable
          accountTotalAds={1}
          ads={
            Immutable.Seq [
              Array [
                "postid1",
                Immutable.Map {
                  "created_datetime": "2019-01-01 10:30:00",
                  "comments_fetched_at": "2019-01-01 10:30:00",
                  "name": "ad 1",
                  "is_active": true,
                  "publisher_platform": "INSTAGRAM",
                  "permalink": "http://fake.link.to/ad1",
                  "ad_account_id": "act_123",
                },
              ],
              Array [
                "postid2",
                Immutable.Map {
                  "created_datetime": "2019-01-01 10:30:00",
                  "comments_fetched_at": "2019-01-01 10:30:00",
                  "name": "ad 2",
                  "is_active": false,
                  "publisher_platform": "INSTAGRAM",
                  "permalink": "http://fake.link.to/ad2",
                  "ad_account_id": "act_123",
                },
              ],
            ]
          }
          loadingAds={Immutable.List []}
          maxAccountAds={100}
          updateAd={[Function]}
        >
          <Table
            hover={true}
            responsiveTag="div"
            tag="table"
          >
            <table
              className="table table-hover"
            >
              <thead>
                <tr
                  className="row"
                >
                  <th>
                    Name
                  </th>
                  <th>
                    Publisher platform
                  </th>
                  <th>
                    Creation date
                  </th>
                  <th />
                </tr>
              </thead>
              <tbody>
                <tr
                  className="row"
                  key="postid1"
                >
                  <td>
                    <a
                      href="http://fake.link.to/ad1"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      ad 1
                    </a>
                  </td>
                  <td
                    className="text-capitalize"
                  >
                    instagram
                  </td>
                  <td>
                    <Connect(DatetimeLabel)
                      dateTime="2019-01-01 10:30:00"
                    >
                      <DatetimeLabel
                        dateTime="2019-01-01 10:30:00"
                        dispatch={[Function]}
                        timezone="America/Los_Angeles"
                      >
                        <span>
                          <span
                            id="datetime-tooltip-pjpsszd2icb"
                          >
                            01/01/2019
                          </span>
                          <Tooltip
                            className="datetimeTooltip"
                            delay={
                              Object {
                                "hide": 0,
                                "show": 200,
                              }
                            }
                            placement="top"
                            target="datetime-tooltip-pjpsszd2icb"
                          >
                            <UncontrolledTooltip
                              className="datetimeTooltip"
                              delay={
                                Object {
                                  "hide": 0,
                                  "show": 200,
                                }
                              }
                              placement="top"
                              target="datetime-tooltip-pjpsszd2icb"
                            >
                              <Tooltip
                                autohide={true}
                                className="datetimeTooltip"
                                delay={
                                  Object {
                                    "hide": 0,
                                    "show": 200,
                                  }
                                }
                                hideArrow={false}
                                isOpen={false}
                                placement="top"
                                placementPrefix="bs-tooltip"
                                target="datetime-tooltip-pjpsszd2icb"
                                toggle={[Function]}
                              />
                            </UncontrolledTooltip>
                          </Tooltip>
                        </span>
                      </DatetimeLabel>
                    </Connect(DatetimeLabel)>
                  </td>
                  <td
                    className="smallest align-middle"
                  >
                    <ToggleButton
                      disabled={false}
                      loading={false}
                      onChange={[Function]}
                      value={true}
                    >
                      <label
                        className="switch"
                        onClick={[Function]}
                      >
                        <input
                          checked={true}
                          disabled={false}
                          readOnly={true}
                          type="checkbox"
                        />
                        <div
                          className="slider"
                        />
                      </label>
                    </ToggleButton>
                  </td>
                </tr>
                <tr
                  className="row"
                  key="postid2"
                >
                  <td>
                    <a
                      href="http://fake.link.to/ad2"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      ad 2
                    </a>
                  </td>
                  <td
                    className="text-capitalize"
                  >
                    instagram
                  </td>
                  <td>
                    <Connect(DatetimeLabel)
                      dateTime="2019-01-01 10:30:00"
                    >
                      <DatetimeLabel
                        dateTime="2019-01-01 10:30:00"
                        dispatch={[Function]}
                        timezone="America/Los_Angeles"
                      >
                        <span>
                          <span
                            id="datetime-tooltip-pjpsszd2icb"
                          >
                            01/01/2019
                          </span>
                          <Tooltip
                            className="datetimeTooltip"
                            delay={
                              Object {
                                "hide": 0,
                                "show": 200,
                              }
                            }
                            placement="top"
                            target="datetime-tooltip-pjpsszd2icb"
                          >
                            <UncontrolledTooltip
                              className="datetimeTooltip"
                              delay={
                                Object {
                                  "hide": 0,
                                  "show": 200,
                                }
                              }
                              placement="top"
                              target="datetime-tooltip-pjpsszd2icb"
                            >
                              <Tooltip
                                autohide={true}
                                className="datetimeTooltip"
                                delay={
                                  Object {
                                    "hide": 0,
                                    "show": 200,
                                  }
                                }
                                hideArrow={false}
                                isOpen={false}
                                placement="top"
                                placementPrefix="bs-tooltip"
                                target="datetime-tooltip-pjpsszd2icb"
                                toggle={[Function]}
                              />
                            </UncontrolledTooltip>
                          </Tooltip>
                        </span>
                      </DatetimeLabel>
                    </Connect(DatetimeLabel)>
                  </td>
                  <td
                    className="smallest align-middle"
                  >
                    <ToggleButton
                      disabled={false}
                      loading={false}
                      onChange={[Function]}
                      value={false}
                    >
                      <label
                        className="switch"
                        onClick={[Function]}
                      >
                        <input
                          checked={false}
                          disabled={false}
                          readOnly={true}
                          type="checkbox"
                        />
                        <div
                          className="slider"
                        />
                      </label>
                    </ToggleButton>
                  </td>
                </tr>
              </tbody>
            </table>
          </Table>
        </AdsTable>
      </div>
    </FacebookIntegrationAds>
  </Connect(FacebookIntegrationAds)>
</Provider>
`;

exports[`<FacebookIntegrationAds/> render() should render without ad 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(FacebookIntegrationAds)
    fetchAds={[Function]}
    integration={
      Immutable.Map {
        "id": 1,
        "name": "integration 1",
        "type": "facebook",
        "created_datetime": "2019-01-01 00:00:00",
      }
    }
    integrations={
      Immutable.List [
        Immutable.Map {
          "id": 1,
          "name": "integration 1",
          "type": "facebook",
          "created_datetime": "2019-01-01 00:00:00",
        },
      ]
    }
    updateAd={[Function]}
  >
    <FacebookIntegrationAds
      fetchAds={[Function]}
      integration={
        Immutable.Map {
          "id": 1,
          "name": "integration 1",
          "type": "facebook",
          "created_datetime": "2019-01-01 00:00:00",
        }
      }
      integrations={
        Immutable.List [
          Immutable.Map {
            "id": 1,
            "name": "integration 1",
            "type": "facebook",
            "created_datetime": "2019-01-01 00:00:00",
          },
        ]
      }
      internals={
        Immutable.Map {
          "1": Immutable.Map {
            "ads": Immutable.Map {},
          },
        }
      }
      loading={false}
      loadingAds={Immutable.List []}
      maxAccountAds={100}
      updateAd={[Function]}
    >
      <div
        className="full-width"
      >
        <PageHeader
          title={
            <Breadcrumb
              tag="ol"
            >
              <BreadcrumbItem
                tag="li"
              >
                <Link
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations"
                >
                  Integrations
                </Link>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                <Link
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations/facebook"
                >
                  Facebook, Messenger & Instagram
                </Link>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                integration 1
              </BreadcrumbItem>
              <BreadcrumbItem
                active={true}
                tag="li"
              >
                Ads
              </BreadcrumbItem>
            </Breadcrumb>
          }
        >
          <div
            className="d-flex align-items-center justify-content-between flex-wrap page-header "
          >
            <Breadcrumb
              tag="ol"
            >
              <ol
                className="breadcrumb"
              >
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    <Link
                      onlyActiveOnIndex={false}
                      style={Object {}}
                      to="/app/settings/integrations"
                    >
                      <a
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Integrations
                      </a>
                    </Link>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    <Link
                      onlyActiveOnIndex={false}
                      style={Object {}}
                      to="/app/settings/integrations/facebook"
                    >
                      <a
                        onClick={[Function]}
                        style={Object {}}
                      >
                        Facebook, Messenger & Instagram
                      </a>
                    </Link>
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  tag="li"
                >
                  <li
                    className="breadcrumb-item"
                  >
                    integration 1
                  </li>
                </BreadcrumbItem>
                <BreadcrumbItem
                  active={true}
                  tag="li"
                >
                  <li
                    className="active breadcrumb-item"
                  >
                    Ads
                  </li>
                </BreadcrumbItem>
              </ol>
            </Breadcrumb>
          </div>
        </PageHeader>
        <FacebookIntegrationNavigation
          integration={
            Immutable.Map {
              "id": 1,
              "name": "integration 1",
              "type": "facebook",
              "created_datetime": "2019-01-01 00:00:00",
            }
          }
        >
          <SecondaryNavbar>
            <Navbar
              className="navbar"
              expand={false}
              tag="nav"
            >
              <nav
                className="navbar navbar"
              >
                <Link
                  activeClassName="disabled"
                  className="nav-link"
                  key=".$/app/settings/integrations/facebook/1/overview"
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations/facebook/1/overview"
                >
                  <a
                    className="nav-link"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    Overview
                  </a>
                </Link>
                <Link
                  activeClassName="disabled"
                  className="nav-link"
                  key=".$/app/settings/integrations/facebook/1/customer_chat"
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations/facebook/1/customer_chat"
                >
                  <a
                    className="nav-link"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    Customer chat
                  </a>
                </Link>
                <Link
                  activeClassName="disabled"
                  className="nav-link"
                  key=".$/app/settings/integrations/facebook/1/preferences"
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="/app/settings/integrations/facebook/1/preferences"
                >
                  <a
                    className="nav-link"
                    onClick={[Function]}
                    style={Object {}}
                  >
                    Preferences
                  </a>
                </Link>
              </nav>
            </Navbar>
          </SecondaryNavbar>
        </FacebookIntegrationNavigation>
        <Container
          className="page-container"
          fluid={true}
          tag="div"
        >
          <div
            className="page-container container-fluid"
          >
            <div
              className="mb-3"
            >
              <p>
                It can take up to 2 hours to synchronize new Instagram ads on Gorgias. Instagram ads 
                 
                comments are fetched every 20 minutes. Comments sent while an Instagram ad was not
                 
                active on Gorgias will not be fetched. Learn more about
                 
                <a
                  href="https://docs.gorgias.io/social-media-integrations/instagram-ads-comments"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Instagram ads comments support
                </a>
                 
                in our docs.
              </p>
            </div>
          </div>
        </Container>
        <AdsTable
          accountTotalAds={0}
          ads={Immutable.Seq []}
          loadingAds={Immutable.List []}
          maxAccountAds={100}
          updateAd={[Function]}
        />
      </div>
    </FacebookIntegrationAds>
  </Connect(FacebookIntegrationAds)>
</Provider>
`;
